# air-paste

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.cargo/: config.toml
crates/airpaste-agent/: Cargo.toml
crates/airpaste-agent/src/: client.rs  clipboard.rs  config.rs  discovery.rs  hotkey.rs  identity.rs  lib.rs  main.rs  outbox.rs  paste.rs  peer.rs  relay.rs  state_file.rs
crates/airpaste-agent/src/clipboard/: macos.rs  windows.rs
crates/airpaste-agent/src/hotkey/: macos.rs  windows.rs
crates/airpaste-agent/src/paste/: macos.rs  windows.rs
crates/airpaste-core/: Cargo.toml
crates/airpaste-core/src/: ids.rs  lib.rs  model.rs  time.rs
crates/airpaste-crypto/: Cargo.toml
crates/airpaste-crypto/src/: lib.rs
crates/airpaste-protocol/: Cargo.toml
crates/airpaste-protocol/src/: api.rs  lib.rs  ws.rs
crates/airpaste-server/: Cargo.toml
crates/airpaste-server/examples/: dump_clips.rs  dump_db.rs  trust_device.rs
crates/airpaste-server/src/: lib.rs  main.rs  relay.rs  routes.rs  state.rs  store.rs  ws.rs
crates/airpaste-tray/: Cargo.toml  build.rs
crates/airpaste-tray/src/: app.rs  autostart.rs  config.rs  icon.rs  macos.rs  main.rs  platform.rs  server.rs  theme.rs
crates/airpaste-tray/src/ui/: header.rs  mod.rs  tab_devices.rs  tab_inbox.rs  tab_send.rs  tab_settings.rs  toast.rs
docs/: DESIGN.md  IOS_SHORTCUTS.md  MACOS_AGENT_PLAN.md  SESSION_HANDOFF.md  USER_MANUAL.md  architecture.html  clipboard-flow-animated.html
pitch/: AirPaste-功能介绍.md  AirPaste路演-3分钟-v2.html  AirPaste路演-3分钟.html
scripts/: bundle-macos.sh  cross-windows.sh  install-windows.ps1  package-windows-portable.ps1  setup-windows-toolchain.ps1  smoke-agent-macos.sh  smoke-agent.ps1  smoke-hotkey-macos.sh  smoke-isolated-hotkey.ps1  smoke-isolated-macos.sh  smoke-isolated.ps1  smoke-relay-macos.sh  smoke-server.ps1  smoke-tray-config.ps1  smoke-tray-connect.ps1  update-build-run-windows.ps1
