[workspace]
members = [
    "crates/airpaste-core",
    "crates/airpaste-protocol",
    "crates/airpaste-agent",
    "crates/airpaste-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/air-paste"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
redb = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
windows-sys = "0.61"
