[workspace]
members = [
    "crates/airpaste-core",
    "crates/airpaste-protocol",
    "crates/airpaste-crypto",
    "crates/airpaste-agent",
    "crates/airpaste-server",
    "crates/airpaste-tray",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/air-paste"

[workspace.dependencies]
anyhow = "1"
arboard = { version = "3.6.1", default-features = false, features = ["image-data"] }
axum = { version = "0.7", features = ["ws"] }
# Default features minus the wgpu backend (0.34 made wgpu the default): we stick with the
# glow/OpenGL backend — it's what 0.29 used, and wgpu-hal v29 fails to build against the
# `windows` crate bindings under the x86_64-pc-windows-gnu toolchain this project ships with.
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
core-foundation-sys = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
futures-util = "0.3"
mdns-sd = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
redb = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
windows-sys = "0.61"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# eframe 0.34.3 with panic-free GL handling (vendor/eframe-0.34.3, only
# src/native/glow_integration.rs changed, sites marked [PATCHED]): upstream `.unwrap()`s the
# glutin make-current calls and exits the app on swap_buffers errors, so a transient GL
# failure — lock screen, display sleep, GPU reset, RDP session switch — killed the tray app.
# That was the Alt+C/V "random crash": the hotkey toast HUD opens a second GL viewport, and
# the context switch it forces is exactly the fragile path. Patched to log, skip the frame,
# and retry instead. Revisit when upstream fixes https://github.com/emilk/egui/issues/4173.
[patch.crates-io]
eframe = { path = "vendor/eframe-0.34.3" }
