[package]
name = "airpaste-agent"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
airpaste-core = { path = "../airpaste-core" }
airpaste-crypto = { path = "../airpaste-crypto" }
airpaste-protocol = { path = "../airpaste-protocol" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
image.workspace = true
mdns-sd.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
# Clipboard images only: text/files stay on the raw Win32 path below, but arboard does the
# CF_DIB/CF_DIBV5 decoding that path lacks.
arboard.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard.workspace = true
core-foundation-sys.workspace = true
