[package]
name = "airpaste-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
airpaste-core = { path = "../airpaste-core" }
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand_core.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
