[package]
name = "airpaste-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
airpaste-core = { path = "../airpaste-core" }
airpaste-crypto = { path = "../airpaste-crypto" }
airpaste-protocol = { path = "../airpaste-protocol" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
