[package]
name = "airpaste-tray"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# macOS-first menu-bar UI. The GUI stack + embedded agent are only pulled in on macOS so the
# rest of the workspace still builds (and cross-compiles to Windows) without the eframe tree.
[target.'cfg(target_os = "macos")'.dependencies]
airpaste-agent = { path = "../airpaste-agent" }
eframe.workspace = true
tray-icon.workspace = true
tokio.workspace = true
# Same major as eframe's winit (0.30) so the event-loop-builder hook types unify.
winit = "0.30"
