[package]
name = "airpaste-tray"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Cross-platform menu-bar / tray UI. The egui stack + embedded agent build on both macOS and
# Windows; verified to cross-compile to x86_64-pc-windows-gnu (eframe's default glow/OpenGL
# backend links fine under mingw-w64).
[dependencies]
airpaste-agent = { path = "../airpaste-agent" }
eframe.workspace = true
tray-icon.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# winit is only needed directly for the macOS accessory ActivationPolicy hook; the Windows
# "no taskbar" behaviour goes through egui's cross-platform ViewportBuilder instead. Same major
# as eframe's winit (0.30) so the event-loop-builder hook types unify.
[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"
