[package]
name = "airpaste-tray"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Cross-platform menu-bar / tray UI. The egui stack + embedded agent build on both macOS and
# Windows; verified to cross-compile to x86_64-pc-windows-gnu (the glow/OpenGL backend pinned
# in the workspace manifest links fine under mingw-w64; eframe 0.34's default wgpu does not).
[dependencies]
airpaste-agent = { path = "../airpaste-agent" }
airpaste-server = { path = "../airpaste-server" }
eframe.workspace = true
tray-icon.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# winit is only needed directly for the macOS accessory ActivationPolicy hook; the Windows
# "no taskbar" behaviour goes through egui's cross-platform ViewportBuilder instead. Same major
# as eframe's winit (0.30) so the event-loop-builder hook types unify.
[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"
# Cmd+V never reaches egui (egui-winit swallows the chord and only emits a Paste event when the
# clipboard has text), so a local NSEvent monitor flags it for the send tab's image/file paste.
# Versions match what arboard already pulls in, so these add no new builds.
block2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "block2",
    "NSEvent",
] }
